# Fractales

./: .gitignore  Fractales.sln  README.md
BuildTools/: PostBuildEvents.bat
CUDAShader/: CUDAShader.cu  CUDAShader.cuh  CUDAShader.vcxproj  CUDAShader.vcxproj.filters  CUDATests.cu  CUDATests.cuh  Demo.cu
FractalesJulia/: FractalesJulia.csproj
FractalesJulia/SRC/: Complexe.cs  ImageFractaleJulia.cs  ImageFractaleJuliaCPU.cs  ImageFractaleJuliaGPU.cs  Polynome.cs  Program.cs
FractalesUI/: FractaleWindows.cpp  FractaleWindows.hpp  FractalesUI.vcxproj  FractalesUI.vcxproj.filters  mainUI.cpp
FractalesUI-OpenGL/: .gitignore  CMakeLists.txt  README.md
FractalesUI-OpenGL/SRC/: JuliaWindow.cpp  JuliaWindow.hpp  Main.cpp  UI.cpp  UI.hpp  Utils.cpp  Utils.hpp
FractalesUI-OpenGL/SRC/ExternalLibs/: README.md  download.sh
FractalesUI-OpenGL/SRC/Shaders/: Julia.frag  Julia.vert
Libraries/: LIBS_README.md
